--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="stop">#B80505</color>
+    <color name="amber">#AC6B0C</color>
+    <color name="go">#3A7014</color>
 </resources>
